# DoubleClique

./: CMakeLists.txt  README.md
client/: 2_phase_1_sided.c  2_phase_1_sided.h  2_phase_2_sided.c  2_phase_2_sided.h  2_phase_read_get.c  2_phase_read_get.h  CMakeLists.txt  ack_region.c  ack_region.h  b3p_get.c  b3p_get.h  contingency_get_fetch.c  contingency_get_fetch.h  get_protocol.h  main.c  main.h  phase_2_queue.c  phase_2_queue.h  profiler_metrics.h  profiler_report_layout.c  profiler_report_layout.h  put.c  put.h  put_ack.c  put_ack.h  put_request_region_utils.c  put_request_region_utils.h  request_region_connection.c  request_region_connection.h  slots.c  slots.h
cmake/modules/: FindSISCI.cmake
common/: CMakeLists.txt  avx_cpy.c  avx_cpy.h  buddy_alloc.h  dma_utils.c  dma_utils.h  get_node_id.c  get_node_id.h  index_data_protocol.c  index_data_protocol.h  linked_list.c  linked_list.h  power_of_two.c  power_of_two.h  profiler.c  profiler.h  profiling.h  put_request_region.c  put_request_region.h  put_request_region_protocol.c  put_request_region_protocol.h  request_region.h  segment_utils.c  segment_utils.h  sequence.c  sequence.h  sisci_glob_defs.h  super_fast_hash.c  super_fast_hash.h  super_fast_hash_circular.c  super_fast_hash_circular.h  superfasthash.c  superfasthash.h
server/: CMakeLists.txt  garbage_collection.c  garbage_collection.h  garbage_collection_queue.c  garbage_collection_queue.h  main.c  main.h  profiler_metrics.h  profiler_report_layout.c  profiler_report_layout.h  put_request_region.c  put_request_region.h  put_request_region_thread.c  put_request_region_thread.h  put_request_region_utils.c  put_request_region_utils.h  request_region_thread.c  request_region_thread.h  request_region_utils.c  request_region_utils.h
xxHash/: CMakeLists.txt  xxHashConfig.cmake.in  xxh_seed.h
